namespace Constants {

    public static class PlayerConstants {
        public const string PLAYER_ANIM_TRIGGER_KNOCKBACK = "knockback";
        public const string PLAYER_ANIM_X_VELOCITY = "xVelocity";
        public const string PLAYER_ANIM_Y_VELOCITY = "yVelocity";
        public const string PLAYER_ANIM_IS_GROUND = "isGround";
        public const string PLAYER_ANIM_IS_WALL_DETECTED = "isWallDetected";
    } 

}